tests/paczka1/fuzzy1/33305631.err
Error in line 1: OvU A410 96,9
Error in line 8: BBH A410 22,8
Error in line 20: NQb A744 258,4
Error in line 35: A744 A410 74,9
